//定义语法版本
syntax="proto3";

//定义Stub代码选项
option java_package="com.tangcheng.rpc.grpc.hello.api";
option java_outer_classname="HelloProto";
option java_multiple_files=true;

//定义包名
package com.tangcheng.rpc.grpc.hello.api;

//定义服务
service HelloService{
//定义方法
  rpc Say(HelloRequest) returns(HelloResponse){}
}

//定义消息（请求）
message HelloRequest{
  string name=1;
}

//定义消息（响应）
message HelloResponse{
  string message=1;
}

